Finish the main algorithm for pthread version

--- a/src/pp/hw2/nbody/Makefile
+++ b/src/pp/hw2/nbody/Makefile
@@ -1,23 +1,20 @@
 # Declaration of variables
 CC = g++
-LFLAGS = -lpthread -xwindow
 
 # File names
-EXEC = hw2_nbody
-SOURCES = $(wildcard *.cpp)
-OBJECTS = $(SOURCES:.cpp=.o) timer.o
+PTHREAD_EXEC = hw2_NB_pthread
+PTHREAD_OBJS = main_pthread.o nbody_pthread.o nbody.o
 
 # Main target
-all: $(OBJECTS)
-	$(CC) $(LFLAGS) $(OBJECTS) -o $(EXEC)
+all: pthread
+
+pthread: $(PTHREAD_OBJS)
+	$(CC) -lpthread $(PTHREAD_OBJS) -o $(PTHREAD_EXEC)
 
 # To obtain object files
 %.o: %.cpp
 	$(CC) -c $< -o $@
 
-timer.o: ../../timer.cpp
-	$(CC) -c $< -o $@
-
 # To clean all output files
 clean:
-	rm -f $(EXEC) $(OBJECTS)
+	rm -f $(PTHREAD_OBJS) $(PTHREAD_EXEC)
