Add OpenMP implementation for N-Body problem

--- a/src/pp/hw2/nbody/Makefile
+++ b/src/pp/hw2/nbody/Makefile
@@ -3,7 +3,7 @@ CC = g++
 
 # File names
 PTHREAD_EXEC = hw2_NB_pthread
-PTHREAD_OBJS = main_pthread.o nbody_pthread.o nbody.o
+PTHREAD_OBJS = main.o nbody_pthread.o nbody.o
 
 # Main target
 all: pthread
