Finish most part of XWindow, but there are bugs

--- a/src/pp/hw2/nbody/Makefile
+++ b/src/pp/hw2/nbody/Makefile
@@ -4,19 +4,19 @@ CC = g++
 # File names
 PTHREAD_EXEC = hw2_NB_pthread
 OMP_EXEC = hw2_NB_omp
-COMMON_OBJS = nbody.o
+COMMON_OBJS = nbody.o gui.o
 
 # Main target
 all: pthread omp
 
 pthread: $(COMMON_OBJS) nbody_pthread.o
 	$(CC) -c main.cpp -o main.o
-	$(CC) -lpthread $(COMMON_OBJS) nbody_pthread.o main.o -o $(PTHREAD_EXEC)
+	$(CC) -lpthread -lX11 $(COMMON_OBJS) nbody_pthread.o main.o -o $(PTHREAD_EXEC)
 
 omp: $(COMMON_OBJS)
 	$(CC) -c -fopenmp nbody_omp.cpp -o nbody_omp.o
 	$(CC) -c -D OMP main.cpp -o main.o
-	$(CC) -lpthread -fopenmp $(COMMON_OBJS) nbody_omp.o main.o -o $(OMP_EXEC)
+	$(CC) -lpthread -lX11 -fopenmp $(COMMON_OBJS) nbody_omp.o main.o -o $(OMP_EXEC)
 
 # To obtain object files
 %.o: %.cpp
