Move the code of GUI out of hw2's directory

--- a/src/pp/hw2/nbody/Makefile
+++ b/src/pp/hw2/nbody/Makefile
@@ -29,6 +29,9 @@ gh: $(COMMON_OBJS)
 %.o: %.cpp
 	$(CC) -c $< -o $@
 
+gui.o: ../../gui.cpp
+	$(CC) -c $< -o $@
+
 timer.o: ../../timer.cpp
 	$(CC) -c $< -o $@
 
