Finish the Hybrid verions

--- a/src/pp/hw3/Makefile
+++ b/src/pp/hw3/Makefile
@@ -12,40 +12,29 @@ HYBRID_STATIC_EXEC = MS_Hybrid_static
 HYBRID_DYNAMIC_EXEC = MS_Hybrid_dynamic
 
 COMMON_OBJS = gui.o timer.o
-MPI_VER_OBJS = mandelbort_set.o ms_mpi_static.o ms_mpi_dynamic.o
+OMP_MAIN_SOURCE = main.cpp main_openmp.cpp mandelbort_set.cpp
+MPI_MAIN_SOURCE = main.cpp main_mpi.cpp mandelbort_set.cpp ms_mpi_static.cpp ms_mpi_dynamic.cpp
 
 # Main target
 all: omp_static omp_dynamic mpi_static mpi_dynamic hy_static hy_dynamic
 
-omp_static: $(COMMON_OBJS) main_openmp.o
-	$(CC) -c -fopenmp mandelbort_set.cpp -o mandelbort_set.o
-	$(CC) -c -D OMP main.cpp -o main.o
-	$(CC) $(LINK_FLAGS) $(COMMON_OBJS) mandelbort_set.o main_openmp.o main.o -o $(OMP_STATIC_EXEC)
+omp_static: $(COMMON_OBJS)
+	$(CC) $(LINK_FLAGS) $(COMMON_OBJS) -D OMP $(OMP_MAIN_SOURCE) -o $(OMP_STATIC_EXEC)
 
-omp_dynamic: $(COMMON_OBJS) main_openmp.o
-	$(CC) -c -D DYNAMIC -fopenmp mandelbort_set.cpp -o mandelbort_set.o
-	$(CC) -c -D OMP main.cpp -o main.o
-	$(CC) $(LINK_FLAGS) $(COMMON_OBJS) mandelbort_set.o main_openmp.o main.o -o $(OMP_DYNAMIC_EXEC)
+omp_dynamic: $(COMMON_OBJS)
+	$(CC) $(LINK_FLAGS) $(COMMON_OBJS) -D OMP -D DYNAMIC $(OMP_MAIN_SOURCE) -o $(OMP_DYNAMIC_EXEC)
 
-mpi_static: $(COMMON_OBJS) mpi_objects
-	$(MPI_CC) -c main_mpi.cpp -o main_mpi.o
-	$(MPI_CC) -c main.cpp -o main.o
-	$(MPI_CC) $(LINK_FLAGS) $(COMMON_OBJS) $(MPI_VER_OBJS) main_mpi.o main.o -o $(MPI_STATIC_EXEC)
+mpi_static: $(COMMON_OBJS)
+	$(MPI_CC) $(LINK_FLAGS) $(COMMON_OBJS) $(MPI_MAIN_SOURCE) -o $(MPI_STATIC_EXEC)
 
-mpi_dynamic: $(COMMON_OBJS) mpi_objects
-	$(MPI_CC) -c -D DYNAMIC main_mpi.cpp -o main_mpi.o
-	$(MPI_CC) -c main.cpp -o main.o
-	$(MPI_CC) $(LINK_FLAGS) $(COMMON_OBJS) $(MPI_VER_OBJS) main_mpi.o main.o -o $(MPI_DYNAMIC_EXEC)
+mpi_dynamic: $(COMMON_OBJS)
+	$(MPI_CC) $(LINK_FLAGS) $(COMMON_OBJS) -D DYNAMIC $(MPI_MAIN_SOURCE) -o $(MPI_DYNAMIC_EXEC)
 
 hy_static: $(COMMON_OBJS)
+	$(MPI_CC) $(LINK_FLAGS) $(COMMON_OBJS) -D HYBRID $(MPI_MAIN_SOURCE) -o $(HYBRID_STATIC_EXEC)
 
 hy_dynamic: $(COMMON_OBJS)
-
-# Compile Sets
-mpi_objects:
-	$(CC) -c -fopenmp mandelbort_set.cpp -o mandelbort_set.o
-	$(MPI_CC) -c ms_mpi_static.cpp -o ms_mpi_static.o
-	$(MPI_CC) -c ms_mpi_dynamic.cpp -o ms_mpi_dynamic.o
+	$(MPI_CC) $(LINK_FLAGS) $(COMMON_OBJS) -D HYBRID -D DYNAMIC $(MPI_MAIN_SOURCE) -o $(HYBRID_DYNAMIC_EXEC)
 
 # To obtain object files
 %.o: %.cpp
